fixed zoom issue on contact form on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -328,6 +328,15 @@ input[type='submit']:hover {
 @media only screen and (max-width: 600px) {
 }
 
+@media screen and (max-width: 767px) {
+  input,
+  select,
+  textarea {
+    font-size: 16px;
+    height: auto;
+  }
+}
+
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
 }
